--- a/shop-eureka/pom.xml
+++ b/shop-eureka/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>shop-eureka</artifactId>
 
 
-    <!-- eureka server: 提供服务发现与服务注册 -->
+    <!-- EurekaApplication server: 提供服务发现与服务注册 -->
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
