--- a/shop-eureka/src/main/resources/application.yml
+++ b/shop-eureka/src/main/resources/application.yml
@@ -1,63 +1,76 @@
-#spring:
-#  application:
-#    name: ad-eureka
-#
-#server:
-#  port: 8000
-
-#eureka:
-#  instance:
-#    hostname: localhost
-#  client:
-#    # 是否从eureka server获取用户信息,单机不需要
-#    fetch-registry: false
-#    # 是否将自己 注册到 eureka server  单机不需要
-#    register-with-eureka: false
-#    service-url:
-#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-
-
----
+# 单机配置
 spring:
   application:
-    name: ad-eureka
-  profiles: server1
+    name: shop-eurekaApplication
+
 server:
   port: 8000
-eureka:
-  instance:
-    hostname: server1
-    prefer-ip-address: false
-  client:
-    service-url:
-      defaultZone: http://server2:8001/eureka/,http://server3:8002/eureka/
 
----
-spring:
-  application:
-    name: ad-eureka
-  profiles: server2
-server:
-  port: 8001
 eureka:
   instance:
-    hostname: server2
-    prefer-ip-address: false
+    hostname: localhost
   client:
+    # 是否从eureka server获取用户信息,单机不需要
+    fetch-registry: false
+    # 是否将自己 注册到 EurekaApplication server  单机不需要
+    register-with-eureka: false
     service-url:
-      defaultZone: http://server1:8000/eureka/,http://server3:8002/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/EurekaApplication/
+#
+##  java -jar shop-eureka-1.0-SNAPSHOT.jar --spring.profiles.active=server1
+##  java -jar shop-eureka-1.0-SNAPSHOT.jar --spring.profiles.active=server2
+##  java -jar shop-eureka-1.0-SNAPSHOT.jar --spring.profiles.active=server3
 
----
-spring:
-  application:
-    name: ad-eureka
-  profiles: server3
-server:
-  port: 8002
-eureka:
-  instance:
-    hostname: server3
-    prefer-ip-address: false
-  client:
-    service-url:
-      defaultZone: http://server1:8000/eureka/,http://server2:8001/eureka/
+#spring:
+#  profiles:
+#    active:  server1
+#
+#
+#---
+#spring:
+#  application:
+#    name: shop-eurekaApplication
+#  profiles: server1
+#server:
+#  port: 8000
+#eureka:
+#  instance:
+#    hostname: server1 #eureka服务端的实例名称
+#  client:
+#    register-with-eureka: false     #false表示不向注册中心注册自己。
+#    fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
+#    service-url:
+#      #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
+#      defaultZone: http://server2:8001/eureka/,http://server3:8002/eureka/
+#---
+#spring:
+#  application:
+#    name: shop-eurekaApplication
+#  profiles: server2
+#server:
+#  port: 8001
+#eureka:
+#  instance:
+#    hostname: server2 #eureka服务端的实例名称
+#  client:
+#    register-with-eureka: false     #false表示不向注册中心注册自己。
+#    fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
+#    service-url:
+#      #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
+#      defaultZone: http://server1:8000/eureka/,http://server3:8002/eureka/
+#---
+#spring:
+#  application:
+#    name: shop-eurekaApplication
+#  profiles: server3
+#server:
+#  port: 8002
+#eureka:
+#  instance:
+#    hostname: server3 #eureka服务端的实例名称
+#  client:
+#    register-with-eureka: false     #false表示不向注册中心注册自己。
+#    fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
+#    service-url:
+#      #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
+#      defaultZone: http://server1:8000/eureka/,http://server2:8001/eureka/
