--- a/shop-service/shop-product/src/main/resources/application.yml
+++ b/shop-service/shop-product/src/main/resources/application.yml
@@ -6,12 +6,19 @@ server:
 spring:
   application:
     name: eureka-client-shop-product
+  datasource:
+    #    driver-class-name: com.mysql.cj.jdbc.Driver # JDBC连接Mysql6以上com.mysql.cj.jdbc.Driver
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    #    url: jdbc:mysql://10.211.55.3:3306/elasticsearchshop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:p6spy:mysql://10.211.55.3:3306/elasticsearchshop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: zsyubo
+    password: 123456
 
 eureka:
   client:
     service-url:
-      defaultZone: http://server1:8000/eureka/,http://server2:8001/eureka/,http://server3:8002/eureka/
-#      defaultZone: http://server1:8000/eureka/
+      #      defaultZone: http://server1:8000/eureka/,http://server2:8001/eureka/,http://server3:8002/eureka/
+      defaultZone: http://server1:8000/eureka/
 
 feign:
   hystrix:
@@ -22,3 +29,12 @@ management:
     web:
       exposure:
         include: "*"
+
+# Logger Config
+logging:
+  level:
+    com.baomidou.mybatisplus.samples: debug
+
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/*.xml
+
