--- a/shop-service/shop-product/src/main/resources/application.yml
+++ b/shop-service/shop-product/src/main/resources/application.yml
@@ -38,3 +38,7 @@ logging:
 mybatis-plus:
   mapper-locations: classpath*:/mapper/*.xml
 
+rocketmq:
+  name-server: 127.0.0.1:9876
+  producer:
+    group: test-group
