--- a/shop-eureka/src/main/resources/application.yml
+++ b/shop-eureka/src/main/resources/application.yml
@@ -12,10 +12,14 @@ eureka:
   client:
     # 是否从eureka server获取用户信息,单机不需要
     fetch-registry: false
-    # 是否将自己 注册到 EurekaApplication server  单机不需要
+    # 是否将自己 注册到 EurekaApplication server  单机不需要，集群需要打开
     register-with-eureka: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/EurekaApplication/
+
+logging:
+  level:
+    org.springframework: debug
 #
 ##  java -jar shop-eureka-1.0-SNAPSHOT.jar --spring.profiles.active=server1
 ##  java -jar shop-eureka-1.0-SNAPSHOT.jar --spring.profiles.active=server2
@@ -37,7 +41,7 @@ eureka:
 #  instance:
 #    hostname: server1 #eureka服务端的实例名称
 #  client:
-#    register-with-eureka: false     #false表示不向注册中心注册自己。
+#    register-with-eureka: true     #false表示不向注册中心注册自己。
 #    fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
 #    service-url:
 #      #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
@@ -53,7 +57,7 @@ eureka:
 #  instance:
 #    hostname: server2 #eureka服务端的实例名称
 #  client:
-#    register-with-eureka: false     #false表示不向注册中心注册自己。
+#    register-with-eureka: true     #false表示不向注册中心注册自己。
 #    fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
 #    service-url:
 #      #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
@@ -69,7 +73,7 @@ eureka:
 #  instance:
 #    hostname: server3 #eureka服务端的实例名称
 #  client:
-#    register-with-eureka: false     #false表示不向注册中心注册自己。
+#    register-with-eureka: true     #false表示不向注册中心注册自己。
 #    fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
 #    service-url:
 #      #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
