--- a/shop-service/shop-product/pom.xml
+++ b/shop-service/shop-product/pom.xml
@@ -74,6 +74,11 @@
             <version>3.8.1</version>
         </dependency>
 
+    <!--        rocketmq-->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
             <artifactId>shop-common</artifactId>
