--- a/spring-learn-xml/pom.xml
+++ b/spring-learn-xml/pom.xml
@@ -3,20 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>shop-service</artifactId>
+        <artifactId>total-parent</artifactId>
         <groupId>elasticsearch-shop-demo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>shop-common</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <dependencies>
+    <artifactId>spring-learn-xml</artifactId>
 
+    <dependencies>
         <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
-            <version>4.4.0</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.0.RELEASE</version>
         </dependency>
     </dependencies>
+
 </project>
