--- a/shop-service/shop-test/pom.xml
+++ b/shop-service/shop-test/pom.xml
@@ -12,11 +12,11 @@
     <artifactId>shop-test</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.example1111111</groupId>
-            <artifactId>demo</artifactId>
-            <version>0.0.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.example1111111</groupId>-->
+<!--            <artifactId>demo</artifactId>-->
+<!--            <version>0.0.1</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
